--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shop-reactjs",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://htphu.github.io/shopping/", 
+  "homepage": "https://htphu.github.io/shopping/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -14,9 +14,9 @@
     "react-notifications-component": "^4.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "redux": "^4.1.2",
-    "sass": "^1.49.8",
+    "sass": "^1.54.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
